# easytext

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: area.rs  atlas.rs  lib.rs
src/shaders/: debug_show_area_borders.wgsl  debug_show_atlas.wgsl  shader.wgsl
